--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=scmanager
 spring.datasource.url=jdbc:mysql://localhost:3306/scmanager
 # spring.datasource.username=root
 spring.datasource.username=root
+
+# this is password
 spring.datasource.password=Mushfique@037
 
 # for creating table and schema
