work on uploading image on cloud

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.security.oauth2.client.registration.google.client-name=google
 spring.security.oauth2.client.registration.google.client-id=185392544843-m2ci741bies3cc056cfleeqohjet8ec9.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+# cloudinary configuration
+cloudinary.cloud.name=dlvtoyh3i
+cloudinary.api.key=554487447192784
+cloudinary.api.secret=1uzqX-ZvoEcNnIziYM8HcJ0Ph0I
