--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/scmanager
 spring.datasource.username=root
 
 # this is password
-spring.datasource.password=databasepassword
+spring.datasource.password=Mushfique@037
 
 # for creating table and schema
 # spring.jpa.hibernate.ddl-auto=update
