--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,19 @@ cloudinary.api.secret=1uzqX-ZvoEcNnIziYM8HcJ0Ph0I
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+# Email configuration
+spring.mail.host=live.smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=api
+spring.mail.password=a1234019f300ddbc063a5b7f7c68e3f4
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mail.properties.domain_name=musha@demomailtrap.com
+
+# spring boot email starter
+
+
+# JavaMailSender
+
